# cyber-controller

./: .gitattributes  .gitignore  CHANGELOG.md  CREDITS.md  DISCLAIMER.md  FORWARD-PLAN.md  README.md  SECURITY.md  build.py  pyproject.toml  site-data.json
.github/workflows/: build-release.yml  discord-release-notify.yml  update-os-catalog.yml
assets/: gen_icons.py  gen_logo.py
docs/: FLASH-TEST-MATRIX.md  HARDWARE-FIRMWARE-MATRIX.md  HOWTO.md  MOBILE-REMOTE.md  NIGHT-SESSION-2026-06-12.md  OVERHAUL-MARATHON.md  RECOMMENDED-SPECS.md  RED-TEAM.md  ROADMAP-FUTURE.md  SESSION-HISTORY.md  WEBSITE-SECURITY.md  WINDOWS-SECURITY.md  bluejammer-control-map.example.json
firmware/: PROTOCOL.md  README.md
firmware/node/: node.ino
firmware/relay/: relay.ino
installer/: README.md  cyber-controller.iss
scripts/: audit_profile_assets.py  build_tool_packs.py  gen_oui_table.py  gen_site_data.py  site_data_manual.json  sync_site.py  update_os_catalog.py  vt_release_scan.py
src/: __init__.py  app.py  version.py
src/config/: ble_company_ids.SOURCE.md  loadout.py  os_catalog.json  oui_table.SOURCE.md  settings.py
src/core/: action_resolver.py  activity_log.py  backup.py  batch.py  ble_analyzer.py  ble_numbers.py  bluejammer_control.py  broadcast.py  capture_correlate.py  capture_export.py  capture_store.py  channel_survey.py  crack_pipeline.py  cross_comm.py  cross_comm_hub.py  cyd_detect.py  deadman_auth.py  defender.py  device_detect.py  device_manager.py  device_menus.py  diagnostics.py  firmware_vault.py  flash_core.py  flash_engine.py  flock.py  handshake.py  health_monitor.py  install.py  legal.py  macro_recorder.py  map_tiles.py  native_crack.py  node_crypto.py  node_link.py  node_provision.py  nodes_controller.py  os_catalog.py  oui.py  profile_loader.py  (+21 more)
src/models/: capture.py  device.py  target.py
src/protocols/: __init__.py  base.py  bluejammer.py  bluestress.py  bruce.py  bw16.py  esp32_div.py  esp32_div_serial.py  esp_at.py  flipper.py  flock_you.py  ghost_esp.py  halehound.py  lxvenode.py  lxveos.py  marauder.py  meshtastic.py  meshtastic_proto.py  meshtastic_ref.py  meshtastic_stream.py  nrf_bluenullifier.py  stream_framer.py
src/security/: access_gate.py  audit_trail.py  encrypted_storage.py  physical_key.py  secure_store.py  vault.py  web_auth.py  win_acl.py
src/ui/: launcher.py
tests/: _equiv_cases.json  _sw_gate_harness.js  test_access_gate_password_change.py  test_access_lockout.py  test_action_resolver_index.py  test_adb_backend.py  test_arg_entry.py  test_audit_hardening.py  test_audit_profile_assets.py  test_autodetect_protocol.py  test_autorouter_rssi_floor.py  test_backend_count.py  test_backup_integrity.py  test_batch_erase.py  test_batch_pinning.py  test_biscuit.py  test_biscuit_detect.py  test_ble_analyzer.py  test_ble_analyzer_tab.py  test_ble_numbers.py  test_bluejammer.py  test_bluejammer_control.py  test_bluejammer_panel.py  test_broadcast.py  test_broadcast_sections.py  test_bundle_manifest.py  test_bw16_protocol.py  test_capabilities.py  test_capture_correlate.py  test_capture_export.py  test_capture_ingest.py  test_capture_store.py  test_cardputer_remote.py  test_cc_gate_hardening_followup.py  test_channel_survey.py  test_chip_match.py  test_clear_gate_vault_message.py  test_command_palette_nav.py  test_connect_baud.py  test_crack_lab_captures.py  (+294 more)
tests/golden/: flash_argv_golden.json  meshtastic_stream_frames.json
(+141 files in other folders)
